--- a/templates/filebeat.yml.erb
+++ b/templates/filebeat.yml.erb
@@ -146,9 +146,9 @@ setup.kibana:
 # Configure what output to use when sending the data collected by the beat.
 
 #-------------------------- Elasticsearch output ------------------------------
-output.elasticsearch:
+#output.elasticsearch:
   # Array of hosts to connect to.
-  hosts: ["10.0.105.100:9200"]
+  #hosts: ["10.0.105.100:9200"]
 
   # Protocol - either `http` (default) or `https`.
   #protocol: "https"
